src/client/index.css
/* ... */
mathinput::after {
  content: "Math Input";
}

mathunit::after {
  content: "Math w/ unit";
}

textdropdown::after {
  content: "Text Dropdown";
}

textinput::after {
  content: "Text Input";
}

mathinput::before,
mathunit::before,
textdropdown::before,
textinput::before {
  content: attr(responseIndex);
  background: darkgray;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  padding: 6px 8px;
  margin-right: 8px;
}

*,
*:after,
*:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -o-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}

[draggable="true"] {
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  /* 古いブラウザ対応 */
  -khtml-user-drag: element;
  -webkit-user-drag: element;
}

.drop-area {
  position: relative;
  padding: 0;
  width: 100%;
  height: 600px;
}

.drop-area .item {
  position: absolute;
  cursor: pointer;
  width: 100px;
  height: 60px;
  font-size: 105%;
  background: white;
  border: dashed 1px black;
  margin: 0;
  padding: 0;
}

.unselectable {
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  user-select: none;
}

.drop-area .item .resizer {
  position: absolute;
  right: 0;
  bottom: 0;
  cursor: se-resize;
  margin: 2px;
  border-top: solid 2px #333;
  border-left: solid 2px #333;
}

.hideDraggableSource {
  transform: translateX(-9999px);
}

.imagelabeldragdrop-droppable {
  display: flex;
  align-items: center;
  border-radius: 5px;
  z-index: 30;
}

.imagelabeldragdrop-droppable .index-box {
  padding: 0 10px;
  color: white;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 40px;
  background: #878282;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.iseditablearialabel .index-box {
  border-radius: 4px;
  margin-right: 5px;
  height: 32px;
  width: 32px;
  justify-content: center;
}

.imagelabeldragdrop-droppable .label-box {
  padding: 0 20px 0 10px;
  display: inline-flex;
}

.imagelabeldragdrop-droppable .img-box {
  width: 10px;
  position: absolute;
  right: 24px;
  display: inline-flex;
}

.imagelabeldragdrop-droppable .container {
  width: 100%;
  height: 100%;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  display: flex;
  justify-content: flex-start;
  /* min-height: 35px; 5043*/
}

.imagelabeldragdrop-droppable.noAnswer {
  border: 1px solid #d9d9d9;
  border-radius: 4px;
  border-right-width: 1px !important;
  box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.1);
}

.controls-bar .ant-select-selection {
  display: none;
}

.drag-full-parent {
  position: absolute;
  width: 100%;
  height: 100%;
}

.ant-upload.ant-upload-drag {
  padding: 20px;
  border: none;
  background: white;
}

.super-dragger {
  margin-top: 20px;
  margin-bottom: 20px;
}

.clipText {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.super-dragger .ant-upload.ant-upload-drag {
  padding: 0;
}

.styled-dragger .ant-upload.ant-upload-drag {
  background: transparent !important;
}

.ant-upload-drag > .ant-upload-list-item-progress {
  margin-top: -50px;
  bottom: 50px;
}

.responseboxContainer.left .responses_box {
  display: block;
  padding-right: 20px !important;
  padding-left: 20px !important;
  text-align: center;
}

.responseboxContainer.right .responses_box {
  display: block;
  padding-right: 20px !important;
  padding-left: 20px !important;
  text-align: center;
}

.responseboxContainer.right.small .responses_box {
  box-sizing: border-box;
  width: 100%;
  padding: 10px !important;
  border-radius: 0;
}

.responseboxContainer.right.small .responses_box .draggable_box {
  font-size: 11px;
  width: 100%;
  padding: 8px;
  margin: 5px 0;
  justify-content: center;
  font-weight: bold;
}

.ant-select-selection {
  width: 100%;
  height: 100%;
}

.ant-select-selection__rendered {
  display: block !important;
}

.template_box.dropdown-small,
.template_box.text-small {
  font-size: 14px;
  font-weight: 600;
  padding: 0 !important;
}

.template_box.dropdown .response-btn.check-answer {
  /* top: -8px; */
  padding: 0 !important;
}

.template_box .ant-select {
  display: inline-block;
  top: 10px;
  margin: 0 20px;
  box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.1);
}

.imagelabeldragdrop-droppable.iseditablearialabel {
  margin: 5px 0;
}

.ant-input {
  margin: 0;
}

p {
  margin: 0;
}

#mainQuill > .ql-container.ql-snow {
  margin: 0 !important;
  padding: 15px !important;
  border-right: 1px solid #e6e6e6 !important;
  border-left: 1px solid #e6e6e6 !important;
}

#mainQuill > .ql-toolbar.ql-snow {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-color: #e6e6e6 !important;
  height: 38px;
  padding: 4px;
}

.DefaultSettings {
  caret-color: transparent;
  outline: none !important;
  border: none !important;
}

#mainQuill .ql-editor {
  min-height: 157px !important;
  background: transparent;
}

#mainQuill .ql-editor p {
  display: inherit !important;
}

#stimulus.toolbars .ql-formats,
.toolbars.ql-toolbar.ql-snow .ql-formats {
  margin: 3px 5px;
}

#mainQuill .ql-formats {
  background: transparent !important;
  position: relative;
}

#mainQuill .ql-formats:not(:last-child) {
  margin-right: 40px;
}

#mainQuill .ql-formats:not(:last-child)::after {
  background: transparent !important;
  display: block;
  content: "|";
  font-weight: 600;
  font-size: 18px;
  position: absolute;
  right: -20px;
  top: 0;
}

span.token,
span.token > *,
span.token.answer {
  margin-left: 1px;
  cursor: pointer;
  border: 1px solid rgba(255, 255, 255, 0);
}

span.token.without-cursor {
  cursor: default;
}

span.token.answer:hover {
  background: #fdcc3b80;
  border: 1px solid #fdcc3b;
}

span.token.active-word.answer {
  background: #fdcc3b80;
  border: 1px solid #fdcc3b;
}

span.token.active-word {
  background: #93d8f780;
  border: 1px solid #12a6e8;
}

#svg-control-block {
  font-size: 0;
}
/* ... */

