fix(LabelImgdropDown): remvoing extra z-index (#5828)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1032,7 +1032,6 @@ textinput::before {
   display: flex;
   align-items: center;
   border-radius: 5px;
-  z-index: 30;
 }
 
 .imagelabeldragdrop-droppable .index-box {
